add navbar code

--- a/src/app/partials/navbar/navbar.component.html
+++ b/src/app/partials/navbar/navbar.component.html
@@ -1,1 +1,13 @@
-<p>navbar works!</p>
+<div class="d-flex justify-content-around align-items-center navbar-wrapper">
+    <div class="nav-links">
+        <a class="navLink" routerLink="/work" routerLinkActive="active-link" >Work</a>
+        <a class="navLink" >Services</a>
+    </div>
+    <div class="logo">
+        <a routerLink=""><img src="assets/logo.png" alt="the sixth draft"></a>
+    </div>
+    <div class="nav-links">
+        <a class="navLink" >Contact</a>
+        <a class="navLink" routerLink="/blog" routerLinkActive="active-link" >Blog</a>
+    </div>
+</div>
