add footer code

--- a/src/app/partials/footer/footer.component.html
+++ b/src/app/partials/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<section class="text-center footer">
+    <h3>Let's Work Together</h3>
+    <p>Reach out to us Today</p>
+    <p>081xxxxxxxx</p>
+    <p>Email- xxxxx@gmail.com</p>
+    <div class="socials">
+        <a href=""><img src="assets/whatsapp.png" alt=""></a>
+        <a href=""><img src="assets/instagram.png" alt=""></a>
+        <a href=""><img src="assets/twitter.png" alt=""></a>
+    </div>
+</section>
