--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,3 +1,24 @@
 <nav>
     <app-navbar></app-navbar>
 </nav>
+
+<section>
+    <div class="blog-container">
+        <div class="blog-heading text-center">
+            <h3 class="blog-title">Blog</h3>
+        </div>
+        <div class="blog-list">
+            <div  *ngFor="let blog of blogList" class="text-center blog">
+                <a href="" class="mb-3">
+                    <img [src]="blog.imageSrc" class="blog-img">
+                    <h3 class="mt-2">{{ blog.title }}</h3>
+                    <p>{{ blog.text }}</p>  
+                </a>   
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="mt-5">
+    <app-footer></app-footer>
+</footer>
