add code for project page component

--- a/src/app/pages/project-page/project-page.component.html
+++ b/src/app/pages/project-page/project-page.component.html
@@ -1,1 +1,28 @@
-<p>project-page works!</p>
+<nav>
+  <app-navbar></app-navbar>
+</nav>
+
+<section>
+  <div class="project-wrapper ">
+
+    <div class="text-center">
+      <h3 class="project-title ">Project Title</h3>
+    </div>
+
+    <div class="project-heading">
+      <p>Project: Marketing Design</p>
+      <p>Client: Avedok</p>
+    </div>
+
+    <div class="project-body d-flex flex-column">
+      <img src="assets/avedok-1.png" class="img-fluid mb-5 project-imgs">
+      <img src="assets/avedok-2.png" class="img-fluid mb-5 project-imgs">
+      <img src="assets/avedok-3.png" class="img-fluid mb-5 project-imgs">
+    </div>
+
+    <div class="project-pagination">
+      <button>PREVIOUS PAGE</button>
+      <button>NEXT PAGE</button>
+    </div>
+  </div>
+</section>
