--- a/src/app/partials/navbar/navbar.component.html
+++ b/src/app/partials/navbar/navbar.component.html
@@ -1,13 +1,22 @@
-<div class="d-flex justify-content-around align-items-center navbar-wrapper">
-    <div class="nav-links">
-        <a class="navLink" routerLink="/work" routerLinkActive="active-link" >Work</a>
-        <a class="navLink" >Services</a>
+<section class="navbar-container">
+    <div class="d-flex justify-content-between align-items-center navbar-wrapper">
+        <div class="nav-links">
+            <a class="navLink" routerLink="/work" routerLinkActive="active-link" >Work</a>
+            <a class="navLink" >Services</a>
+        </div>
+
+        <div class="logo text-center">
+            <a routerLink=""><img src="assets/logo.png" alt="the sixth draft"></a>
+        </div>
+
+        <div class="menu" *ngIf="true">
+            <button><img src="assets/menu.png" alt=""></button>
+        </div>
+
+        <div class="nav-links">
+            <a class="navLink" >Contact</a>
+            <a class="navLink" routerLink="/blog" routerLinkActive="active-link" >Blog</a>
+        </div>
+
     </div>
-    <div class="logo">
-        <a routerLink=""><img src="assets/logo.png" alt="the sixth draft"></a>
-    </div>
-    <div class="nav-links">
-        <a class="navLink" >Contact</a>
-        <a class="navLink" routerLink="/blog" routerLinkActive="active-link" >Blog</a>
-    </div>
-</div>
+</section>`
