--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -70,9 +70,19 @@
       <h2 class="feat-work-text">Featured Work</h2>
   
       <div class="grid-container">
-        <div class="grid-item"><img src="assets/avedok.png" alt=""></div>
-        <div class="grid-item"><img src="assets/FIDgallery.png" alt=""></div>
-        <div class="grid-item"><img src="assets/ayaba.png" alt=""></div>
+        <div class="grid-item">
+          <img src="assets/avedok.png" class="img-fluid">
+          <p class="text-center">Avedok</p>
+        </div>
+        
+        <div class="grid-item">
+          <img src="assets/FIDgallery.png" class="img-fluid">
+          <p class="text-center">FID Gallery</p>
+        </div>
+        <div class="grid-item">
+          <img src="assets/ayaba.png" class="img-fluid">
+          <p class="text-center">Ayaba</p>
+        </div>
       </div>
   
       <button class="view-more ">View More</button>
