fix font size on hero section

--- a/src/app/pages/landing-page/landing-page.component.css
+++ b/src/app/pages/landing-page/landing-page.component.css
@@ -217,5 +217,11 @@ h2,h3{
 		font-size: 0.8rem;
 		width: 35%;
 	}
-	
+	.hero-section h2{
+		font-size: 3rem;
+	}
+	.hero-section p{
+		font-size: 1.3rem;
+		width: 80%;
+	}
 }
