--- a/src/app/partials/footer/footer.component.css
+++ b/src/app/partials/footer/footer.component.css
@@ -23,8 +23,7 @@
 .socials img{
     width: 50%;
 }
-
-@media (max-width: 400px) {
+@media (max-width: 550px) {
     .footer{
         width: 90%;
     }
@@ -37,4 +36,7 @@
     .socials{
         width: 50%;
     }
+}
+@media (max-width: 400px) {
+   
 }
