--- a/src/app/pages/blog/blog.component.css
+++ b/src/app/pages/blog/blog.component.css
@@ -20,3 +20,14 @@
   text-decoration: none;
   color: white;
 }
+@media (max-width: 550px) {
+  .blog-list{
+    width: 85%;
+    gap: 2rem;
+  }
+}
+@media (max-width: 400px) {
+  .blog-list{
+    gap: 1.5rem;
+  }
+}
